# arm-eabi

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  SF32LB52_FLASHING.md  forge.bat
bsp/: afio.h  gpio.h  gptim.h  i2c.h  lcd_driver.h  nvic.h  qspi.h  rcc.h  register.h  spi.h  uart.h
cmake/: firmware.cmake  libraries.cmake
cmake/toolchains/: clang-arm-none-eabi.cmake
common/: CMakeLists.txt  picolibc_syscalls.c
common/bit-bang/: bb_gpio.h
common/bit-bang/i2c/: bb_i2c.c  bb_i2c.h
common/bit-bang/qspi/: bb_qspi.c  bb_qspi.h
common/bit-bang/spi/: bb_spi.c  bb_spi.h
common/bit-bang/uart/: bb_uart.c  bb_uart.h
common/lcd/: lcd.c  lcd.h
common/lcd/bus/: lcd_qspi_bitbang.c  lcd_qspi_bitbang.h
common/lcd/ic_driver/: co5300_oled.c  nv3030b_tft.c
common/lcd/panel/: co5300_oled.c  nv3030b_tft.c
common/log/: log.h
common/print/: print.c  print.h
docs/: README.md  picolibc.md  ulibc.md
docs/SDK/sifli-sdk/: .commit_template  Jenkinsfile
docs/SDK/sifli-sdk/customer/boards/sf32lb58-lcd_a128r32n1_dsi/hcpu/: board.conf
docs/SDK/sifli-sdk/docs/: version.json
docs/SDK/sifli-sdk/drivers/Include/: bf0_hal_aon.h
docs/SDK/sifli-sdk/drivers/cmsis/sf32lb52x/: SConscript
docs/SDK/sifli-sdk/drivers/cmsis/sf32lb55x/Templates/gcc/hcpu/: link.lds
docs/SDK/sifli-sdk/drivers/cmsis/sf32lb58x/: bf0_pin_const.h
docs/SDK/sifli-sdk/rtos/rtthread/components/drivers/spi/: spi_msd.h
libc/: CMakeLists.txt
libc/usr/local/include/: picolibc.h
libc/usr/local/lib/: picolibc_inittls.ld  picolibcpp_noflash.ld
libc/usr/local/lib/v8-m.main+fp/: picolibc.ld  picolibc_noflash.ld  picolibcpp.ld  picolibcpp_linux.ld
partfrom/SF32LB52x/board/SF32LB52-DevKit-Nano/: board.h
partfrom/SF32LB52x/bsp/: afio.c  gpio.c  gptim.c  i2c.c  lcd_driver.c  nvic.c  qspi_gpio.c  rcc.c  spi.c  uart.c
partfrom/SF32LB52x/bsp/bit-bang/: bb_qspi.c
partfrom/SF32LB52x/bsp/bit-bang/qspi/: bb_qspi.c  bb_qspi.h
partfrom/SF32LB52x/bsp/bsp_afio/: bsp_afio.c  bsp_afio.h
partfrom/SF32LB52x/bsp/bsp_dwt/: bsp_dwt.c  bsp_dwt.h
partfrom/SF32LB52x/bsp/bsp_gpio/: bsp_gpio.c  bsp_gpio.h
partfrom/SF32LB52x/bsp/bsp_nvic/: bsp_nvic.c  bsp_nvic.h
partfrom/SF32LB52x/bsp/bsp_rcc/: bsp_rcc.c  bsp_rcc.h
partfrom/SF32LB52x/bsp/bsp_uart/: bsp_uart.c  bsp_uart.h
partfrom/SF32LB52x/docs/SDK/sifli-sdk/.github/workflows/: build-docs.yml
partfrom/SF32LB52x/docs/SDK/sifli-sdk/customer/boards/: Kconfig_drv
partfrom/SF32LB52x/docs/SDK/sifli-sdk/customer/boards/include/: drv_io.h
partfrom/SF32LB52x/docs/SDK/sifli-sdk/customer/peripherals/charger/aw32001/: aw32001.c
partfrom/SF32LB52x/docs/SDK/sifli-sdk/drivers/cmsis/sf32lb52x/: i2c.h  lpsys_aon.h  register.h
partfrom/SF32LB52x/docs/SDK/sifli-sdk/drivers/cmsis/sf32lb52x/Templates/gcc/hcpu/: link.lds
partfrom/SF32LB52x/docs/SDK/sifli-sdk/drivers/cmsis/sf32lb56x/: SConscript
partfrom/SF32LB52x/docs/SDK/sifli-sdk/drivers/cmsis/sf32lb56x/Templates/gcc/hcpu/: link.lds
partfrom/SF32LB52x/docs/SDK/sifli-sdk/drivers/cmsis/sf32lb58x/: SConscript
partfrom/SF32LB52x/docs/SDK/sifli-sdk/example/multicore/acpu_task/project/acpu/: proj.conf
partfrom/SF32LB52x/docs/SDK/sifli-sdk/example/multicore/acpu_task/project/hcpu/: proj.conf
partfrom/SF32LB52x/docs/SDK/sifli-sdk/middleware/audio/audio_voice_proc/: audio_3a_anyka.c
partfrom/SF32LB52x/docs/SDK/sifli-sdk/middleware/include/: acpu_ctrl.h
partfrom/SF32LB52x/docs/SDK/sifli-sdk/rtos/rtthread/components/drivers/: Kconfig
partfrom/SF32LB52x/docs/SDK/sifli-sdk/tools/autotest/: build.bat
partfrom/SF32LB52x/peripherals/lcd/: lcd.c  lcd.h
partfrom/SF32LB52x/soc/: SF32LB52.h  SF32LB52_registers.h  link.ld  startup.c  system.c  system.c.binbak
partfrom/SF32LB52x/tools/: readme.md
platform/SF32LB52x/: CMakeLists.txt
platform/SF32LB52x/bsp/: bsp.h
platform/SF32LB52x/bsp/SF32LB52-DevKit-Nano/: board.c  board.h
platform/SF32LB52x/drivers/hal/: hal_afio.c  hal_afio.h  hal_gpio.c  hal_gpio.h  hal_pwm.c  hal_pwm.h  hal_uart.c  hal_uart.h
platform/SF32LB52x/drivers/ll/: ll_atim.c  ll_atim.h  ll_dwt.c  ll_dwt.h  ll_gpio.c  ll_gpio.h  ll_nvic.c  ll_nvic.h  ll_pinmux.c  ll_pinmux.h  ll_rcc.c  ll_rcc.h  ll_rtt.c  ll_rtt.h  ll_uart.c  ll_uart.h
platform/SF32LB52x/drivers/soc/: SF32LB52.h
platform/SF32LB52x/tools/: readme.md
project/blink/: CMakeLists.txt  CMakePresets.json  README.md  flash.cmake  link.ld  main.c  main.c.binbak  project.cmake  rtconfig.h  startup.c  system.c
project/blink/boot/: BOOT_FLOW.md  boot_board.c  boot_board.h  boot_cfg.h  link.ld  main.c
project/blink/cmake/toolchains/: clang-arm-none-eabi.cmake
project/bootloader/: BOOT_FLOW.md  CMakeLists.txt  CMakePresets.json  README.md  boot_board.c  boot_jump.c  boot_jump.h  register.h
project/bootloader/cmake/toolchains/: clang-arm-none-eabi.cmake
project/firmware/: README.md  main.elf
project/firmware/bootloader/: .config  Kconfig  bootloader.asm  bootloader.elf  bootloader.elf.strip.elf  bootloader.hex  bootloader.map  compile_commands.json  cppdefines.txt  kconfiglist  ptab.h  rtconfig.h  unassigned_sym.txt  unselected_choice.txt
project/firmware/ftab/: .config  Kconfig  cppdefines.txt  ftab.asm  ftab.elf  ftab.elf.strip.elf  ftab.hex  ftab.map  kconfiglist  ptab.h  rtconfig.h  unassigned_sym.txt
project/firmware/ftab/board/: ftab.c
project/lcd_test/: CMakeLists.txt  CMakePresets.json  README.md  build_firmware.sh  flash.cmake  main.c  reconfigure_cmake.sh  system.c
project/rtthread_blink/: CMakeLists.txt  board.c  link.ld  main.c  project.cmake  rtconfig.h  startup.c  system.c
project/test/: CMakeLists.txt  CMakePresets.json  README.md  SF32LB52x.h  board.h  flash.cmake  gpio.c  gpio.h  main.c  startup.s
project/test/cmake/toolchains/: clang-arm-none-eabi.cmake
project/wasm3_test/: CMakeLists.txt  main.c  startup.c  system.c
ulibc/include/: assert.h  barelib.h  errno.h  inttypes.h  math.h  print.h  stdio.h  stdlib.h  string.h  time.h  ulibc.h  ulibc_print.h
ulibc/src/: assert_fail.c  barelib.c  format.c  format.h  heap.c  math.c  print.c  stdio.c  string.c  strto.c  time_stub.c  ulibc.c
(+1 files in other folders)
